public/css/style.css
/* ... */
#fh5co-home .text-wrap {
  display: table;
  width: 100%;
  position: relative;
  z-index: 4;
}
#fh5co-home .text-inner {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}
#fh5co-home .text-inner a {
  color: white;
  border-bottom: 1px dashed rgba(255, 255, 255, 0.5);
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}
#fh5co-home .text-inner a:hover, #fh5co-home .text-inner a:active, #fh5co-home .text-inner a:focus {
  text-decoration: none;
  color: white;
  border-bottom: 1px dashed white;
}
#fh5co-home .text-inner h1 {
  font-size: 50px;
  color: white;
  margin: 0 0 20px 0;
}
#fh5co-home .text-inner h2 {
  font-size: 28px;
  line-height: 38px;
  font-weight: 300;
  color: rgba(255, 255, 255, 0.8);
  margin: 0;
}

.slant {
  position: absolute;
  transform: rotate(-1.7deg);
  -ms-transform: rotate(-1.7deg);
  -webkit-transform: rotate(-1.7deg);
  -o-transform: rotate(-1.7deg);
  -moz-transform: rotate(-1.7deg);
  background-color: #fff;
  content: "";
  z-index: 3;
  display: inline-block;
  height: 70px;
  bottom: 0;
  margin-bottom: -35px;
  padding: 0;
  width: 101%;
}

#fh5co-intro {
  position: relative;
  bottom: 0;
  margin-top: -150px;
  z-index: 10;
  padding-bottom: 7em;
}
@media screen and (max-width: 768px) {
  #fh5co-intro {
    padding-bottom: 3em;
  }
}
#fh5co-intro > div {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -moz-flex-wrap: wrap;
}
#fh5co-intro .fh5co-block {
  width: 33.33%;
  float: left;
  text-align: center;
  font-size: 16px;
  min-height: 100%;
  vertical-align: middle;
  padding: 40px 40px 0px 40px;
  background: #fff;
  -webkit-box-shadow: 7px 14px 42px 3px rgba(163, 174, 184, 0.4);
  -moz-box-shadow: 7px 14px 42px 3px rgba(163, 174, 184, 0.4);
  -ms-box-shadow: 7px 14px 42px 3px rgba(163, 174, 184, 0.4);
  -o-box-shadow: 7px 14px 42px 3px rgba(163, 174, 184, 0.4);
  box-shadow: 7px 14px 42px 3px rgba(163, 174, 184, 0.4);
  z-index: 7;
  flex-grow: 1;
  background-size: cover;
  position: relative;
  backgroun-repeat: no-repeat;
}
@media screen and (max-width: 768px) {
  #fh5co-intro .fh5co-block {
    width: 100%;
  }
}
#fh5co-intro .fh5co-block > .overlay-darker {
  z-index: 8;
  opacity: .5;
  background: #474747;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}
#fh5co-intro .fh5co-block > .overlay {
  background: #fff;
  opacity: 1;
  z-index: 9;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
}
#fh5co-intro .fh5co-block > .fh5co-text {
  position: relative;
  z-index: 10;
}
#fh5co-intro .fh5co-block > .fh5co-text .fh5co-intro-icon {
  font-size: 50px;
  color: #52d3aa;
  margin-bottom: 30px;
  display: block;
}
#fh5co-intro .fh5co-block h2 {
  font-size: 24px;
  font-weight: 400;
}
#fh5co-intro .fh5co-block:hover > .overlay, #fh5co-intro .fh5co-block:focus > .overlay {
  opacity: 0;
  z-index: 9;
}
#fh5co-intro .fh5co-block:hover > .fh5co-text, #fh5co-intro .fh5co-block:focus > .fh5co-text {
  color: #fff;
}
#fh5co-intro .fh5co-block:hover > .fh5co-text .fh5co-intro-icon, #fh5co-intro .fh5co-block:focus > .fh5co-text .fh5co-intro-icon {
  color: #fff;
}
#fh5co-intro .fh5co-block:hover h2, #fh5co-intro .fh5co-block:focus h2 {
  color: #fff;
}
#fh5co-intro .fh5co-block:hover .btn, #fh5co-intro .fh5co-block:focus .btn {
  border: 2px solid #fff !important;
  background: transparent;
}
#fh5co-intro .fh5co-block:hover .btn:hover, #fh5co-intro .fh5co-block:focus .btn:hover {
  background: #52d3aa !important;
  border: 2px solid #52d3aa !important;
}

.watch-video {
  text-align: center;
  width: 100%;
  display: block;
  float: left;
}
.watch-video span {
  display: block;
  margin-bottom: 20px;
  letter-spacing: 2px;
  text-transform: uppercase;
  font-weight: bold;
}
.watch-video .btn-video {
  display: block;
  font-size: 60px;
  height: 120px;
  width: 120px;
  margin: 0 auto;
  border: 2px solid #52d3aa;
  line-height: 0px;
  display: table;
  text-align: center;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  border-radius: 50%;
}
.watch-video .btn-video:hover, .watch-video .btn-video:focus, .watch-video .btn-video:active {
  text-decoration: none;
}
.watch-video .btn-video i {
  position: relative;
  display: table-cell;
  vertical-align: middle;
  margin: 0;
  padding: 0;
  right: -9px;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
}
.watch-video .btn-video:hover i, .watch-video .btn-video:focus i {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  -o-transform: scale(1.1);
  transform: scale(1.1);
}

#fh5co-services, #fh5co-testimonials, #fh5co-counters, #fh5co-work, #fh5co-contact, #fh5co-about {
  padding: 4em 0;
}
@media screen and (max-width: 768px) {
  #fh5co-services, #fh5co-testimonials, #fh5co-counters, #fh5co-work, #fh5co-contact, #fh5co-about {
    padding: 2em 0;
  }
}

#fh5co-services, #fh5co-work, #fh5co-counters {
  padding: 7em 0;
}
@media screen and (max-width: 768px) {
  #fh5co-services, #fh5co-work, #fh5co-counters {
    padding: 4em 0;
  }
}
/* ... */

